# mini-context-sphere

./: .coveragerc  .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  .pymarkdown.json  CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASE_NOTES_0_3_0.md  RELEASE_NOTES_0_5_0.md  codecov.yml  main.py  mcp_pb2.py  mcp_pb2_grpc.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release-notes.yml
.vibe/: AI_DEV_INSTRUCTIONS.md  API_SPEC.md  ARCHITECTURE.md  INFRA_NOTES.md  PIPELINE_NOTES.md  ROADMAP.md  STATIC_SITE.md  STATUS.md
app/: __init__.py  main.py  mcp_pb2.py  mcp_pb2_grpc.py  mcp_service.py  query.py
app/db/: data.db
config/: graph_schema.yaml
docs/: backend.md  dev-env.md  index.md  infra.md  mcp-grpc.md  pipeline-optimization.md  pipeline.md  roadmap.md  static-site.md  testing-qa.md
infra/: main.tf  outputs.tf  variables.tf
pipeline/: __init__.py  ai_client.py  cli.py  config.py  hypergraph_writer.py  markdown_loader.py  schema_loader.py
proto/: README.md  mcp.proto
scripts/: generate_release_notes.py  update_version_badge.py
static-site/: README.md  index.html
tests/: conftest.py  test_ai_client.py  test_app.py  test_cli.py  test_cli_main.py  test_end_to_end_pipeline.py  test_grpc_mcp.py  test_http_grpc_contract.py  test_hypergraph_writer.py  test_hypergraph_writer_extra.py  test_markdown_loader.py  test_pipeline_config.py  test_query.py  test_schema_loader.py
tutorials/linkedin/: README.md  demo.html  graph_schema.yaml
